--- a/examples/mosquitto-pg.conf
+++ b/examples/mosquitto-pg.conf
@@ -27,9 +27,9 @@ auth_opt_port 3306
 auth_opt_dbname test
 auth_opt_user account
 auth_opt_pass secret
-auth_opt_userquery SELECT password FROM users WHERE username = '%s'
-auth_opt_superquery SELECT IFNULL(COUNT(*), 0) FROM users WHERE username = '%s' AND super = 1
-auth_opt_aclquery SELECT topic FROM acls WHERE username = '%s'
+auth_opt_userquery SELECT password FROM users WHERE username = %s
+auth_opt_superquery SELECT IFNULL(COUNT(*), 0) FROM users WHERE username = %s AND super = 1
+auth_opt_aclquery SELECT topic FROM acls WHERE username = %s
 
 
 # Usernames with this fnmatch(3) (a.k.a glob(3))  pattern are exempt from the
